--- a/src/index.html
+++ b/src/index.html
@@ -700,9 +700,10 @@
                     <h3 class="custom-heading">
                         الماركات العالمية
                     </h3>
+
                     <div class="row">
-                        <div class="col-6 brand-products ">
-                            <div class=" custom-panel">
+                        <div class="col-12 col-md-6 brand-products ">
+                            <div class="custom-panel">
                                 <div id="carousel-brand-adidas" class="carousel slide" data-slide="carousel">
                                     <div class="carousel-inner">
 
@@ -710,12 +711,12 @@
                                             <div class="row">
                                                 <div class="col-4">
                                                     <img src="./images/adidas_1.jpg" alt="قميص تك فت بيز" class="product-image">
-                                                    <a href="product.html" class="btn  custom-btn-primary btn-block d-none d-lg-block">
+                                                    <a href="product.html" class="btn-custom-primary  btn-block d-none d-lg-block">
                                                         تصفح المنتج
                                                     </a>
                                                 </div>
 
-                                                <div class="col-8 product-details">
+                                                <div class="col-lg-8 product-details">
                                                     <div class="clearfix">
                                                         <div class="float-right">
                                                             <h4>قميص تك فت بيز</h4>
@@ -738,20 +739,30 @@
 
                                                 </div>
 
-                                                <div class="col-4">
+                                                <div class="col-12 d-lg-none">
+                                                    <a href="product.html" class="btn  custom-btn-primary btn-block">تصفح المنتج</a>
+                                                </div>
+
+                                            </div>
+                                        </div>
+
+
+                                        <div class="carousel-item">
+                                            <div class="row">
+                                                <div class="col-lg-4">
                                                     <img src="./images/adidas_2.jpg" alt="حذاء بيور بوست الرياضي" class="product-image">
                                                     <a href="product.html" class="btn  custom-btn-primary btn-block d-none d-lg-block">
-                                                        تصفح المنتج
+                                                      تصفح المنتج
                                                     </a>
                                                 </div>
 
-                                                <div class="col-8 product-details">
+                                                <div class="col-lg-8 product-details">
                                                     <div class="clearfix">
                                                         <div class="float-right">
                                                             <h4>حذاء بيور بوست الرياضي </h4>
                                                         </div>
-                                                        <div class="float-left price">
-                                                            35$
+                                                        <div class="price float-left ">
+                                                            150$
                                                         </div>
                                                     </div>
                                                     <p class="custom-text-muted">
@@ -768,17 +779,15 @@
 
                                                 </div>
 
+                                                <div class="col-12 d-lg-none">
+                                                    <a href="product.html" class="btn  custom-btn-primary btn-block">تصفح المنتج</a>
+                                                </div>
 
                                             </div>
-                                        </div>
-
-
-                                        <div class="carousel-item">
 
                                         </div>
 
                                     </div>
-
 
                                     <div class="brand-nav">
                                         <div class="clearfix">
@@ -788,7 +797,6 @@
                                                 </div>
                                                 <img src="./images/adidas_small.png" alt="Adidas">
                                             </div>
-
                                             <div class="float-left">
                                                 <button class="btn custom-arrow-btn" data-target="#carousel-brand-adidas" data-slide="prev">
                                                     <i class="fas fa-chevron-right"></i>
@@ -800,30 +808,98 @@
                                         </div>
                                     </div>
 
-
                                 </div>
                             </div>
-                        </div>
 
-                        <div class="col-6 brand-products">
+                            <div class="col-6 brand-products"></div>
 
-                        </div>
+                            <div class="col-6 brand-products"></div>
 
-                        <div class="col-6 brand-products">
-
-                        </div>
-
-                        <div class="col-6 brand-products">
+                            <div class="col-6 brand-products"></div>
 
                         </div>
                     </div>
                 </div>
-            </div>
-            <!--نهاية الماركات العالمية -->
+                <!--نهاية الماركات العالمية -->
 
-            <br><br><br><br><br><br><br><br><br><br>
-        </div>
+
+
+                <!--تذييل الصفحة -->
+                <div id="footer" class="row">
+                    <div id="brand-logos" class="col-12 text-center">
+                        <span>المتجر وكيل مُعتمد لكبرى الشركات العالمية</span>
+
+                        <div class="img-container">
+                            <img src="./images/lacoste.png" alt="Lacoste">
+                            <img src="./images/adidas.png" alt="Adidas">
+                            <img src="./images/puma.png" alt="Puma">
+                            <img src="./images/polo.png" alt="Polo">
+                        </div>
+
+                    </div>
+
+                    <div id="footer-nav" class="col-12 text-center">
+                        <div class="footer-logo">
+                            <a href="./">
+                                <img src="./images/logo_footer.png" alt="عربي">
+                            </a>
+                        </div>
+
+                        <div id="footer-nav-links" class="col-12 d-none d-md-block">
+                            <a href=".">الصفحة الرئيسية</a>
+                            <a href="search.html">البحث المتقدّم</a>
+                            <a href="contact.html">تواصل معنا</a>
+                        </div>
+
+                        <div id="newsletter" class="col-6 offset-3">
+                            <form>
+                                <label for="footer-email">
+                                    تابع النشرة البريديّة لأحدث العروض
+                                </label>
+                                <br>
+                                <div class="input-group">
+                                    <input type="email" class="form-control custom-form-control" placeholder="البريد الإلكتروني" name="email" required>
+                                    <button type="submit" class="btn custom-btn  custom-btn-primary2">
+                                            متابعة
+                                        </button>
+                                </div>
+                            </form>
+                        </div>
+
+                    </div>
+
+                    <div id="footer-copyright-social" class="col-12">
+                        <div class="container">
+                            <div class="clearfix">
+
+                                <div id="copyright" class="float-right">
+                                    جميع الحقوق محفوظة للمتجر لسنة 2020
+                                </div>
+
+                                <div id="social-icons" class="float-left">
+                                    <a href="https://www.facebook.com">
+                                        <i class="fab fa-facebook-square fa-lg"></i>
+                                    </a>
+                                    <a href="https://www.twitter.com">
+                                        <i class="fab fa-twitter-square fa-lg"></i>
+                                    </a>
+                                    <a href="https://www.instagram.com">
+                                        <i class="fab fa-instagram fa-lg"></i>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+                <!--نهاية تذيل الصفحة -->
+
+
+                <br><br><br><br><br><br><br><br><br><br>
+            </div>
 
 </body>
+
+</html>
 
 </html>
